# tap-woocommerce

./: .gitignore  README.md  meltano.yml  pyproject.toml  tap-woocommerce.sh  tox.ini
.secrets/: .gitignore
tap_woocommerce/: client.py  streams.py  tap.py  test.py
tap_woocommerce/tests/: test_core.py
