[tool.poetry]
name = "tap-woocommerce"
version = "0.0.2"
description = "`tap-woocommerce` is a Singer tap for WooCommerce, built with the Meltano SDK for Singer Taps."
authors = ["hotglue"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.3"
woocommerce = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-woocommerce = 'tap_woocommerce.tap:TapWooCommerce.cli'
